inserted SearchThisArea component inside a new pane, Z-index is OK but now the position isn't fixed

--- a/src/styles/searchThisAreaButton.css
+++ b/src/styles/searchThisAreaButton.css
@@ -1,5 +1,5 @@
 #search-this-area-button-container {
-  z-index: 1000;
+  z-index: 100;
   position: absolute;
   top: 60px;
   left: 50%;
